--- a/QTPayWithFunLight.AspMvc/Views/Payments/_Filter.cshtml
+++ b/QTPayWithFunLight.AspMvc/Views/Payments/_Filter.cshtml
@@ -1,4 +1,4 @@
-﻿@model QTPayWithFunLight.AspMvc.Models.FilterModel
+﻿@model QTPayWithFunLight.AspMvc.Models.PaymentsFilter
 
 <div class="row">
     <div class="col-md-4">
